2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>

	* Parser/TagDatabaseManager.cs: Use the new DesktopService
	  instead of PlatformService.

2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CProject.cs: Track api changes.

2009-06-13  Mike Krüger  <mkrueger@novell.com>

	* Gui/CTextEditorExtension.cs: Applied patch "Bug 512617 -
	  [PATCH] Deleting a selected line with Enter, got "Error in
	  text editor extension chain.".

2009-04-20  Michael Hutchinson  <mhutchinson@novell.com>

	* CLanguageBinding.cs:
	* CppLanguageBinding.cs: Track comment tag API.

2009-04-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CProject.cs: Track api changes in IExecutionHandler.

2009-04-20  Mike Krüger  <mkrueger@novell.com>

	* templates/ConsoleCProject.xpt.xml:
	* templates/EmptyCSourceFile.xft.xml:
	* templates/EmptyCHeaderFile.xft.xml:
	* templates/ConsoleCppProject.xpt.xml:
	* templates/EmptyCppHeaderFile.xft.xml:
	* templates/EmptyCppSourceFile.xft.xml:
	* templates/StaticLibraryCProject.xpt.xml:
	* templates/SharedLibraryCProject.xpt.xml:
	* templates/SharedLibraryCppProject.xpt.xml:
	* templates/StaticLibraryCppProject.xpt.xml: Fixed "Bug 491090
	  - Standard Header doesn't work".

2009-04-20  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* Gui/CTextEditorExtension.cs:
	* gtk-gui/CBinding.AddPathDialog.cs:
	* gtk-gui/CBinding.AddLibraryDialog.cs: Track api changes.

2009-04-17  Mike Kestner  <mkestner@novell.com>

	* CBinding.csproj: don't require specific gtk-sharp version.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* CBinding.addin.xml: Bump MD version.

2009-03-13  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* gtk-gui/gui.stetic:
	* gtk-gui/CBinding.PackageDetails.cs: Making some strings not
	  translatable.

2009-03-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CProject.cs: Changed the way execution handlers
	  work. We are not using platform ids anymore. Instead, we use