@@ -1,3 +1,8 @@
+2009-06-29  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com> 
+
+	* Compiler/GNUCompiler.cs: Localize output parser.
+	  Fixes #501898.
+
 2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Parser/TagDatabaseManager.cs: Use the new DesktopService
